name:                docker-hub
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/docker-hub#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:   DockerHub.Build
                   , DockerHub.Config
                   , DockerHub.Data
                   , DockerHub.Process
                   , DockerHub.Pull

  build-depends:     aeson >= 0.8.0.2 && < 1
                   , base >= 4.7 && < 5
                   , bytestring >= 0.10.6.0 && < 1
                   , cmdargs >= 0.10 && < 1
                   , curl >= 1.3.8 && < 2
                   , process >= 1.2.3.0 && < 2
                   , text >= 1.2.1.3 && < 2
                   , yaml >= 0.8.15.1 && < 1

  default-language:    Haskell2010

executable docker-hub-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cmdargs
                     , docker-hub
  default-language:    Haskell2010

test-suite docker-hub-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , docker-hub
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/docker-hub
